[workspace]
resolver = "2"

# Please ensure that each crate comes before any other crate that depends on it
members = ["core", "net", "p2p", "jsonrpc"]

[workspace.package]
description = "A library for building p2p, decentralized, and collaborative software"
version = "0.1.6"
edition = "2021"
homepage = "https://karyontech.net"
repository = "https://github.com/karyontech/karyon"
license = "GPL-3.0"
authors = ["hozan23 <hozan23@karyontech.net>"]

[workspace.dependencies]
karyon_core = { path = "core", version = "0.1.6", default-features = false }

karyon_net = { path = "net", version = "0.1.6", default-features = false }
karyon_async_rustls = { path = "net/async_rustls", version = "0.1.6", default-features = false }

karyon_jsonrpc = { path = "jsonrpc", version = "0.1.6", default-features = false }
karyon_jsonrpc_macro = { path = "jsonrpc/impl", version = "0.1.6", default-features = false }

karyon_p2p = { path = "p2p", version = "0.1.6", default-features = false }


log = "0.4.21"
thiserror = "1.0.61"
chrono = "0.4.38"
rand = "0.8.5"
url = "2.5.2"
parking_lot = "0.12.3"
once_cell = "1.19.0"
semver = "1.0.23"
sha2 = "0.10.8"

# async 
async-channel = "2.3.1"
async-trait = "0.1.80"
pin-project-lite = "0.2.14"
async-process = "2.2.3"
smol = "2.0.0"
tokio = "1.38.0"
futures-util = { version = "0.3.5", default-features = false }

# encode
bincode = "2.0.0-rc.3"
serde = "1.0"
serde_json = "1.0.117"
base64 = "0.22.1"

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# websocket
async-tungstenite = { version = "0.26.2", default-features = false }

# tls
rustls-pki-types = "1.7.0"
futures-rustls = "0.26.0"
tokio-rustls = "0.26.0"
rcgen = "0.13.1"
yasna = "0.5.2"
x509-parser = "0.16.0"
