[workspace]
resolver = "2"

# Please ensure that each crate comes before any other crate that depends on it
members = ["core", "net", "net/async_rustls", "jsonrpc", "jsonrpc/impl", "p2p"]

[workspace.package]
description = "A library for building p2p, decentralized, and collaborative software"
version = "0.2.1"
edition = "2021"
homepage = "https://karyontech.net"
repository = "https://github.com/karyontech/karyon"
license = "GPL-3.0"
authors = ["hozan23 <hozan23@karyontech.net>"]

[workspace.dependencies]
karyon_core = { path = "core", version = "0.2.1", default-features = false }

karyon_net = { path = "net", version = "0.2.1", default-features = false }
karyon_async_rustls = { path = "net/async_rustls", version = "0.2.1", default-features = false }

karyon_jsonrpc = { path = "jsonrpc", version = "0.2.1", default-features = false }
karyon_jsonrpc_macro = { path = "jsonrpc/impl", version = "0.2.1", default-features = false }

karyon_p2p = { path = "p2p", version = "0.2.1", default-features = false }

log = "0.4"
thiserror = "1.0"
chrono = "0.4"
rand = "0.8"
url = "2.5"
parking_lot = "0.12"
once_cell = "1.19"
semver = "1.0"
sha2 = "0.10"

# async 
async-channel = "2.3"
async-trait = "0.1"
pin-project-lite = "0.2"
async-process = "2.2"
smol = "2.0"
tokio = "1.38"
futures-util = { version = "0.3", default-features = false }

# encode
bincode = "2.0.0-rc.3"
serde = "1.0"
serde_json = "1.0"
base64 = "0.22"

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# websocket
async-tungstenite = { version = "0.28", default-features = false }

# tls
rustls-pki-types = "1.9"
futures-rustls = "0.26"
tokio-rustls = "0.26"
rcgen = "0.13"
yasna = "0.5"
x509-parser = "0.16"
