[workspace]
resolver = "2"

# Please ensure that each crate comes before any other crate that depends on it
members = [
    "core",
    "net",
    "net/async_rustls",
    "jsonrpc",
    "jsonrpc/impl",
    "p2p",
    "swarm",
    "utils/eventemitter",
    "utils/eventemitter/derive",
]

[workspace.package]
description = "A library for building p2p, decentralized, and collaborative software"
edition = "2021"
homepage = "https://karyontech.net"
repository = "https://github.com/karyontech/karyon"
license = "MIT"
authors = ["hozan23 <hozan23@karyontech.net>"]

[workspace.dependencies]
karyon_core = { path = "core", version = "=1.0.0-alpha.1", default-features = false }

karyon_net = { path = "net", version = "=1.0.0-alpha.1", default-features = false }
karyon_async_rustls = { path = "net/async_rustls", version = "=1.0.0-alpha.1", default-features = false }

karyon_jsonrpc = { path = "jsonrpc", version = "=1.0.0-alpha.1", default-features = false }
karyon_jsonrpc_macro = { path = "jsonrpc/impl", version = "=1.0.0-alpha.1", default-features = false }

karyon_p2p = { path = "p2p", version = "=1.0.0-alpha.1", default-features = false }
karyon_swarm = { path = "swarm", version = "=1.0.0-alpha.1", default-features = false }

karyon_eventemitter = { path = "./utils/eventemitter", version = "=1.0.0-alpha.1", default-features = false }
karyon_eventemitter_macro = { path = "./utils/eventemitter/derive", version = "=1.0.0-alpha.1", default-features = false }

log = "0.4"
thiserror = "2.0"
chrono = "0.4"
rand = "0.8"
url = "2.5"
parking_lot = "0.12"
once_cell = "1.21"
semver = "1.0"
sha2 = "0.10"
siphasher = "1.0"
dirs = "6.0"
ed25519-dalek = "2.2"


# async 
# testing (karyon_core/testing)
easy-parallel = "3.3"
env_logger = "0.11"

async-channel = "2.5"
async-trait = "0.1"
pin-project-lite = "0.2"
async-process = "2.5"
smol = "2.0"
tokio = "1.49"
futures-util = { version = "0.3", default-features = false }

# encode
bincode = "2.0"
bytes = "1.11"
serde = "1.0"
serde_json = "1.0"
base64 = "0.22"

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# websocket
async-tungstenite = { version = "0.33", default-features = false }

# quic
quinn = { version = "0.11", default-features = false }

# http
hyper = { version = "1.8", default-features = false }
hyper-util = { version = "0.1", default-features = false }
http-body-util = "0.1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
smol-hyper = { version = "0.1", default-features = false }

# tls
rustls-pki-types = "1.13"
futures-rustls = "0.26"
tokio-rustls = "0.26"
rcgen = "0.14"
yasna = "0.5"
x509-parser = "0.18"
