[package]
name = "karyon_core"
description = "Internal crate for Karyon library."
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["smol"]
crypto = ["ed25519-dalek"]
tokio = ["dep:tokio"]
smol = ["dep:smol", "async-process"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dirs = "5.0.1"
once_cell = { workspace = true }

async-channel = { workspace = true }
pin-project-lite = { workspace = true }
async-process = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
futures-util = { workspace = true, features = [
    "alloc",
], default-features = false }

bincode = { workspace = true }

ed25519-dalek = { version = "2.1.1", features = ["rand_core"], optional = true }
