[package]
name = "karyon_core"
description = "Internal crate for Karyon library."
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["smol"]
crypto = ["ed25519-dalek"]
tokio = ["dep:tokio"]
smol = ["dep:smol", "async-process"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
bincode = { workspace = true }
dirs = { workspace = true }

pin-project-lite = { workspace = true }
async-process = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }

ed25519-dalek = { workspace = true, features = ["rand_core"], optional = true }
