[package]
name = "karyon_jsonrpc"
description = "A fast and lightweight async JSONRPC2.0 implementation."
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"


[features]
default = ["smol", "tcp", "unix"]
tcp = ["karyon_net/tcp"]
tls = ["tcp", "karyon_net/tls"]
ws = ["tcp", "karyon_net/ws", "async-tungstenite"]
unix = ["karyon_net/unix"]
smol = [
  "karyon_core/smol",
  "karyon_net/smol",
  "karyon_jsonrpc_macro/smol",
  "async-tungstenite?/async-std-runtime",
]
tokio = [
  "karyon_core/tokio",
  "karyon_net/tokio",
  "karyon_jsonrpc_macro/tokio",
  "async-tungstenite?/tokio-runtime",
]

[dependencies]
karyon_core = { version = "0.1.6", path = "../core", default-features = false }
karyon_net = { version = "0.1.6", path = "../net", default-features = false }

karyon_jsonrpc_macro = { version = "0.1.6", path = "impl", default-features = false }

log = "0.4.21"
rand = "0.8.5"
thiserror = "1.0.61"

# encode/decode
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

# async 
async-trait = "0.1.80"
async-channel = "2.3.1"

# websocket
async-tungstenite = { version = "0.26.2", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.11.3"
smol = "2.0.0"
