[package]
name = "karyon_jsonrpc_macro"
description = "Procedural macros for karyon_jsonrpc."
version = "1.0.0-alpha.2"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords = ["jsonrpc", "rpc", "karyon"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = ["smol"]
smol = []
tokio = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

serde_json = { workspace = true }
