[package]
name = "karyon_jsonrpc_macro"
version.workspace = true 
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = ["smol"]
smol = ["karyon_jsonrpc_internal/smol"]
tokio = ["karyon_jsonrpc_internal/tokio"]

[dependencies]
karyon_jsonrpc_internal = { path = "../jsonrpc_internal", default-features = false }

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

serde_json = "1.0.114"

