[package]
name = "karyon_async_rustls"
description = "Internal crate for Karyon library."
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["smol"]
smol = ["futures-rustls"]
tokio = ["tokio-rustls"]

[dependencies]
futures-rustls = { version = "0.25.1", optional = true }
tokio-rustls = { version = "0.26.0", optional = true }

