[package]
name = "karyon_async_rustls"
description = "Async rustls wrapper supporting both smol and tokio runtimes for the Karyon library."
version = "1.0.0-alpha.4"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords = ["tls", "rustls", "async", "smol", "tokio"]
categories = ["network-programming", "asynchronous", "cryptography"]

[features]
default = ["smol"]
smol = ["futures-rustls"]
tokio = ["tokio-rustls"]

[dependencies]
futures-rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
