[package]
name = "karyon_eventemitter"
description = "TODO"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
log = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }

async-channel = { workspace = true }
futures-util = { workspace = true, features = [
    "alloc",
], default-features = false }
parking_lot = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12.20", features = ["stream"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
serde = { workspace = true, features = ["derive"] }
