[package]
name = "tokio-example"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
karyon_p2p = { path = "../../", default-features = false, features = ["tokio"] }
async-channel = "2.3"
tokio = { version = "1.45", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
env_logger = "0.11"
