[package]
name = "karyon_eventemitter_macro"
description = "Procedural macros for karyon_eventemitter."
version = "1.0.0-alpha.7"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords = ["eventemitter", "events", "karyon"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
